--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main class="main">
         <header class="header">
-            <a href="#" class="logo">JEE Advanced</a>
+            <a href="#" class="logo">Sadharan Testing Agency</a>
 
             <nav class="navbar">
                 <a href="#" class="active">Home</a>
