question panel done

--- a/index.html
+++ b/index.html
@@ -22,13 +22,47 @@
             </nav>
         </header>
 
-        <section class="home">
-            <div class="home-content">
-                <h1>JEE Advanced</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ullam quae, quos error, ipsa suscipit consectetur ea accusantium eligendi, impedit iusto.</p>
-                <button class="start-btn">Start Exam</button>
-            </div>
-        </section>
+        <div class="container">
+            <section class="quiz-section">
+                <div class="quiz-box">
+                    <h1>JEEA CBT</h1>
+                    <div class="quiz-header">
+                        <span>Quiz Website Tutorials</span>
+                        <span class="header-score">
+                            0 / 180</span>
+                    </div>
+
+                    <h2 class="question-text">What does HTML stand for ?</h2>
+                    <div class="option-list">
+                        <div class="option">
+                            <span>Option A</span>
+                        </div>
+                        <div class="option">
+                            <span>Option B</span>
+                        </div>
+                        <div class="option">
+                            <span>Option C</span>
+                        </div>
+                        <div class="option">
+                            <span>Option D</span>
+                        </div>
+                    </div>
+
+                    <div class="quiz-footer">
+                        <span class="question-total"> 1 of 51 Questions</span>
+                        <button class="next-btn">Next</button>
+                    </div>
+                </div>
+            </section>
+        
+            <section class="home">
+                <div class="home-content">
+                    <h1>JEE Advanced</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ullam quae, quos error, ipsa suscipit consectetur ea accusantium eligendi, impedit iusto.</p>
+                    <button class="start-btn">Start Exam</button>
+                </div>
+            </section>
+        </div>
     </main>
     
     <div class="popup-info">
